# svg_Gal

./: Cargo.toml  LICENSE  MIT License.md
svgGal/: Cargo.toml
svg_gal/: Cargo.toml  README.txt
svg_gal/src/: gall_ang.rs  gall_char.rs  gall_circle.rs  gall_config.rs  gall_errors.rs  gall_fn.rs  gall_letter_type.rs  gall_line.rs  gall_loc.rs  gall_node.rs  gall_ord.rs  gall_pair.rs  gall_parse.rs  gall_phrase.rs  gall_sentence.rs  gall_stem.rs  gall_struct.rs  gall_tainer.rs  gall_vowel.rs  gall_word.rs  gall_word2.rs  gallord.rs  main.rs  main2.rs  pairing.rs  render.rs  rendering.rs
svg_gal/src_old/: gall_phrase.rs  gall_struct.rs  rendering.rs
