[package]
name = "svg_Gal"
version = "0.1.0"
edition = "2021"
author = "Impronoucabl"

[lib]
name = "svg_Gal"
path = "src/lib.rs"

[[bin]]
name = "GalPrototype"
path = "src/bin/galPrototype.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tagger ="4.3.4"
